--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -347,7 +347,7 @@
     <string name="no_scheduled_appointments">No Scheduled Appointments</string>
     <string name="no_scheduled_appointments_or_medicines_for_today">No Scheduled Appointments or Medicines For Today</string>
     <string name="anxiety_analysis">Anxiety Analysis</string>
-    <string name="anxiety_analysis_description">Learn more about your anxiety and health,\n just one click away!</string>
+    <string name="anxiety_analysis_description">Learn more about your anxiety and health, just one click away!</string>
     <string name="start_date">Start Date</string>
     <string name="set_start">set start</string>
     <string name="end_date">End Date</string>
@@ -359,6 +359,25 @@
     <string name="arabic">Arabic</string>
     <string name="home">Home</string>
     <string name="reports">Reports</string>
+    <string name="activity_and_steps">Activity and Steps</string>
+    <string name="average_steps">Average Steps</string>
+    <string name="recommended">Recommended</string>
+    <string name="avg_sleep_hours">Avg. Sleep Hours</string>
+    <string name="sleep_analysis">Sleep Analysis</string>
+    <string name="no_results_available_to_analyze">No Results Available To Analyze.</string>
+    <string name="show_map">Show Map</string>
+    <string name="location_analysis">Location Analysis</string>
+
+    <string name="no_loc_high">No locations were found associated with a high anxiety level.</string>
+    <string name="record_audio">Record Audio</string>
+    <string name="take_a_deep_breath_then_talk">Take a Deep Breath, Then Talk</string>
+    <string name="select">select</string>
+    <string name="edit_profile_small">Edit Profile</string>
+    <string name="about_you">About You</string>
+    <string name="my_profile">My Profile</string>
+    <string name="edit_my_information">Edit My Information</string>
+    <string name="possible_places">Possible Places :</string>
+    <string name="frequency">Frequency:</string>
 
 </resources>
 
