--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,6 @@
     <string name="google_calendar">Google Calendar</string>
     <string name="connect_google_calendar">Connect Google Calendar</string>
     <string name="status_not_connected">Status: Not Connected</string>
-    <string name="success">Success</string>
     <string name="generate_report">Generate Report</string>
     <string name="duration">Duration:</string>
     <string name="last_two_weeks">Last Two Weeks</string>
@@ -378,6 +377,11 @@
     <string name="edit_my_information">Edit My Information</string>
     <string name="possible_places">Possible Places :</string>
     <string name="frequency">Frequency:</string>
+    <string name="accuracy">Accuracy</string>
+    <string name="for_more_accurate_results_we_nrecommend_wearing_your_smartwatch_nfor_at_least_12_hours_a_day">For more accurate results, we\nrecommend wearing your smartwatch\nfor at least 12 hours a day.</string>
+    <string name="success">Success</string>
+    <string name="account_created_a_link_has_been_nsent_to_confirm_your_email">Account created, a link has been\nsent to confirm your email !</string>
+    <string name="reset">Reset</string>
 
 </resources>
 
