[FEAT] : Google Calendar + Edit profile
- Google calendar in calendar fragment
- Add connect with google calendar in profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -383,6 +383,12 @@
     <string name="account_created_a_link_has_been_nsent_to_confirm_your_email">Account created, a link has been\nsent to confirm your email !</string>
     <string name="reset">Reset</string>
 
+    <string name="google_events">Google Events</string>
+    <string name="no_scheduled_google_events">No Scheduled Google Events</string>
+    <string name="status_connected">Status : Connected</string>
+    <string name="status_connect">Status : Connected!</string>
+    <string name="disabled">Disabled</string>
+
 </resources>
 
 
